package cn.edu.lcu.cs.javaprogramming.oop.animal;

public class Penguin extends Bird implements Swimmable {
    @Override
    public void eat() {
        System.out.println("喜欢吃鱼");
    }

    @Override
    public void feed() {
        System.out.println("企鹅吐鱼喂孩子");
    }

    @Override
    public void sleep() {

    }

   /**
    * 会游泳
    */
    public void swim() {
        System.out.println("都是游泳高手");
    }
}
